objects/BMCServiceDesk__SelfService_Image__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKTheme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Theme</label>
        <referenceTo>BMCServiceDesk__SelfService_Theme__c</referenceTo>
        <relationshipLabel>SelfService Images</relationshipLabel>
        <relationshipName>SelfService_Images</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Image_Key__c</fullName>
        <label>Image Key</label>
        <picklist>
            <picklistValues>
                <fullName>LoginHeader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BannerHeader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Background</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MainApplication Logo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Image_Type__c</fullName>
        <label>Image Type</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Sequence__c</fullName>
        <externalId>true</externalId>
        <label>Sequence Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>